fix: enforce uniform input dimensions and fix iOS date/time overflow

--- a/src/rehearsals/rehearsals.css
+++ b/src/rehearsals/rehearsals.css
@@ -317,6 +317,9 @@
 .rehearsal-form input {
   width: 100%;
   max-width: 100%;
+  min-width: 0;
+  inline-size: 100%;
+  max-inline-size: 100%;
   height: 54px;
   min-height: 54px;
   max-height: 54px;
@@ -343,13 +346,27 @@
   -webkit-text-fill-color: #3f4a45;
   opacity: 1;
   color-scheme: light;
+  -webkit-appearance: none;
+  appearance: none;
+  min-width: 0;
+  inline-size: 100%;
+  max-inline-size: 100%;
+  height: 54px;
+  box-sizing: border-box;
 }
 
 .rehearsal-form input[type="date"]::-webkit-date-and-time-value,
 .rehearsal-form input[type="time"]::-webkit-date-and-time-value {
-  height: 100%;
-  line-height: 54px;
+  display: block;
+  width: 100%;
+  min-width: 0;
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   text-align: left;
+  line-height: normal;
   color: #3f4a45;
 }
 
